TEMP, point to new RAD changes for unit removal

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ dependencies = [
     "numpy >=1.22",
     "astropy >=5.3.0",
     # "rad >= 0.21.0",
-    "rad @ git+https://github.com/spacetelescope/rad.git",
+    "rad @ git+https://github.com/WilliamJamieson/rad.git@feature/remove_ref_units",
     "asdf-standard >=1.1.0",
 ]
 dynamic = ["version"]
